update all jupyter examples for v7 and paths

--- a/Examples/Jupyter/AHP/AHP_JobOffer_InitialModel_dev_byStaceyBanks_DM2022.ipynb
+++ b/Examples/Jupyter/AHP/AHP_JobOffer_InitialModel_dev_byStaceyBanks_DM2022.ipynb
@@ -74,7 +74,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 1,
       "metadata": {
         "trusted": true
       },
@@ -87,7 +87,7 @@
         "\n",
         "\n",
         "# Create a model\n",
-        "jobOfferModel = str.Model()"
+        "jobOfferModel = str.Model(\"JobOffer\")"
       ]
     },
     {
@@ -99,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 2,
       "metadata": {
         "trusted": true
       },
@@ -121,7 +121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 3,
       "metadata": {
         "trusted": true
       },
@@ -151,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 4,
       "metadata": {
         "trusted": true
       },
@@ -170,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 5,
       "metadata": {
         "trusted": true
       },
@@ -203,7 +203,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 6,
       "metadata": {
         "trusted": true
       },
@@ -219,7 +219,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 7,
       "metadata": {
         "trusted": true
       },
@@ -235,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 8,
       "metadata": {
         "trusted": true
       },
@@ -265,7 +265,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 9,
       "metadata": {
         "trusted": true
       },
@@ -288,7 +288,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 10,
       "metadata": {
         "trusted": true
       },
@@ -322,7 +322,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 11,
       "metadata": {
         "trusted": true
       },
@@ -361,7 +361,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 12,
       "metadata": {
         "trusted": true
       },
@@ -442,11 +442,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
-        "input.export4ExcelQuestFull(jobOfferModel, 'DM_jobOfferEmpty.xlsx')"
+        "# mac path\n",
+        "input.export4ExcelQuestFull(jobOfferModel, '/Users/Shared/PythonAHP/Examples/IO Files/DM_jobOfferEmpty.xlsx')\n",
+        "\n",
+        "# windows user please use the path below\n",
+        "# input.export4ExcelQuestFull(jobOfferModel, 'C:/Users/Public/PythonAHP/Examples/IO Files/DM_jobOfferEmpty.xlsx')"
       ]
     },
     {
@@ -459,7 +463,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -562,10 +566,15 @@
         }
       ],
       "source": [
-        "inputFilePath=\"../../IO Files/jobOffer_Excel_filledinFull.xlsx\"\n",
-        "outputFilepath = \"../../IO Files/jobOffer_Results.xlsx\"\n",
+        "# mac path\n",
+        "inputFilePath=\"/Users/Shared/PythonAHP/Examples/IO Files/jobOffer_Excel_filledinFull.xlsx\"\n",
+        "outputFilepath = \"/Users/Shared/PythonAHP/Examples/IO Files/jobOffer_Results.xlsx\"\n",
         "\n",
-        "calc.calcAHPMatricesSave2File(jobOfferModel,inputFilePath,outputFilepath,False,True,True)\n"
+        "# windows users please use the path below\n",
+        "#inputFilePath=\"/Users/Shared/PythonAHP/Examples/IO Files/jobOffer_Excel_filledinFull.xlsx\"\n",
+        "#outputFilepath = \"/Users/Shared/PythonAHP/Examples/IO Files/jobOffer_Results.xlsx\"\n",
+        "\n",
+        "calc.calcAHPMatricesSave2File(jobOfferModel,inputFilePath,outputFilepath,True,False,True,True)\n"
       ]
     },
     {
@@ -578,7 +587,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
