--- a/Examples/Jupyter/AHP/AHP_moveModel_dev_byDM2022.ipynb
+++ b/Examples/Jupyter/AHP/AHP_moveModel_dev_byDM2022.ipynb
@@ -33,7 +33,8 @@
           "output_type": "stream",
           "text": [
             "\n",
-            "Model Type:pairwise\n",
+            "Model Name: Places to move to after graduation\n",
+            "Type:pairwise\n",
             "Nodes: []\n",
             " Clusters: []\n",
             " Node Connections: []\n",
@@ -42,7 +43,7 @@
         }
       ],
       "source": [
-        "moveModel=str.Model()\n",
+        "moveModel=str.Model(\"Places to move to after graduation\")\n",
         "\n",
         "print(moveModel)"
       ]
@@ -368,7 +369,8 @@
           "output_type": "stream",
           "text": [
             "\n",
-            "Model Type:pairwise\n",
+            "Model Name: Places to move to after graduation\n",
+            "Type:pairwise\n",
             "Nodes: [Goal order: 1, Distance order: 2, Weather order: 3, Job Availability order: 4, Safety order: 5, Sunny order: 6, Seasons order: 7, Disaster order: 8, Crime order: 9, New York order: 10, San Diego order: 11, Austin order: 12]\n",
             " Clusters: [1Goal order: 0, 2Criteria order: 1, 3SubCriteria order: 2, 4SubCriteria2 order: 3, 5Alternatives order: 3]\n",
             " Node Connections: []\n",
@@ -476,7 +478,8 @@
           "output_type": "stream",
           "text": [
             "\n",
-            "Model Type:pairwise\n",
+            "Model Name: Places to move to after graduation\n",
+            "Type:pairwise\n",
             "Nodes: [Goal order: 1, Distance order: 2, Weather order: 3, Job Availability order: 4, Safety order: 5, Sunny order: 6, Seasons order: 7, Disaster order: 8, Crime order: 9, New York order: 10, San Diego order: 11, Austin order: 12]\n",
             " Clusters: [1Goal order: 0, 2Criteria order: 1, 3SubCriteria order: 2, 4SubCriteria2 order: 3, 5Alternatives order: 3]\n",
             " Node Connections: {Goal order: 1: [Distance order: 2, Weather order: 3, Job Availability order: 4, Safety order: 5], Distance order: 2: [New York order: 10, San Diego order: 11, Austin order: 12], Weather order: 3: [Sunny order: 6, Seasons order: 7], Job Availability order: 4: [New York order: 10, San Diego order: 11, Austin order: 12], Safety order: 5: [Disaster order: 8, Crime order: 9], Sunny order: 6: [New York order: 10, San Diego order: 11, Austin order: 12], Seasons order: 7: [New York order: 10, San Diego order: 11, Austin order: 12], Disaster order: 8: [New York order: 10, San Diego order: 11, Austin order: 12], Crime order: 9: [New York order: 10, San Diego order: 11, Austin order: 12], New York order: 10: [], San Diego order: 11: [], Austin order: 12: []}\n",
@@ -625,12 +628,15 @@
       },
       "outputs": [],
       "source": [
-        "input.export4ExcelQuestFull(moveModel,'moveModel_Excel.xlsx')"
+        "# mac path\n",
+        "input.export4ExcelQuestFull(moveModel,'/Users/Shared/PythonAHP/Examples/IO Files/moveModel_Excel.xlsx')\n",
+        "# windows path\n",
+        "#input.export4ExcelQuestFull(moveModel,'C:/Users/Public/PythonAHP/Examples/IO Files/moveModel_Excel.xlsx')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [
         {
@@ -649,11 +655,11 @@
             "---------------------------------------------------------------------------\n",
             "\n",
             "Inconsistency indices:\n",
-            "[0.592, 0.181, 0.0, 0.104, 0.0, 0.002, -0.0, 0.001, 0.133, 0.592, 0.181, 0.0, 0.104, 0.0, 0.002, -0.0, 0.001, 0.133, 0.592, 0.181, 0.0, 0.104, 0.0, 0.002, -0.0, 0.001, 0.133]\n",
+            "[0.592, 0.181, 0.0, 0.104, 0.0, 0.002, -0.0, 0.001, 0.133]\n",
             "---------------------------------------------------------------------------\n",
             "\n",
             "Priority vectors:\n",
-            "[array([0.165, 0.330, 0.348, 0.157]), array([0.721, 0.094, 0.185]), array([0.200, 0.800]), array([0.682, 0.236, 0.082]), array([0.333, 0.667]), array([0.789, 0.103, 0.108]), array([0.714, 0.143, 0.143]), array([0.097, 0.717, 0.186]), array([0.289, 0.606, 0.105]), array([0.165, 0.330, 0.348, 0.157]), array([0.721, 0.094, 0.185]), array([0.200, 0.800]), array([0.682, 0.236, 0.082]), array([0.333, 0.667]), array([0.789, 0.103, 0.108]), array([0.714, 0.143, 0.143]), array([0.097, 0.717, 0.186]), array([0.289, 0.606, 0.105]), array([0.165, 0.330, 0.348, 0.157]), array([0.721, 0.094, 0.185]), array([0.200, 0.800]), array([0.682, 0.236, 0.082]), array([0.333, 0.667]), array([0.789, 0.103, 0.108]), array([0.714, 0.143, 0.143]), array([0.097, 0.717, 0.186]), array([0.289, 0.606, 0.105])]\n",
+            "[array([0.165, 0.330, 0.348, 0.157]), array([0.721, 0.094, 0.185]), array([0.200, 0.800]), array([0.682, 0.236, 0.082]), array([0.333, 0.667]), array([0.789, 0.103, 0.108]), array([0.714, 0.143, 0.143]), array([0.097, 0.717, 0.186]), array([0.289, 0.606, 0.105])]\n",
             "-----------------------SUPERMATRIX----------------------------------------------------\n",
             "\n",
             "[[0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000]\n",
@@ -692,14 +698,18 @@
         }
       ],
       "source": [
-        "inputFilPath=\"../../IO Files/moveModel_Excel_Filledin.xlsx\"\n",
-        "outputFilepath=\"../../IO Files/moveModel_Results.xlsx\"\n",
-        "calc.calcAHPMatricesSave2File(moveModel,inputFilPath,outputFilepath,False,True,True)"
+        "# mac path\n",
+        "inputFilPath=\"/Users/Shared/PythonAHP/Examples/IO Files/moveModel_Excel_Filledin.xlsx\"\n",
+        "outputFilepath=\"/Users/Shared/PythonAHP/Examples/IO Files/moveModel_Results.xlsx\"\n",
+        "# windows path\n",
+        "#inputFilPath=\"C:/Users/Public/PythonAHP/Examples/IO Files/moveModel_Excel_Filledin.xlsx\"\n",
+        "#outputFilepath=\"C:/Users/Public/PythonAHP/Examples/IO Files/moveModel_Results.xlsx\"\n",
+        "calc.calcAHPMatricesSave2File(moveModel,inputFilPath,outputFilepath,True,False,True,True)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [
         {
