--- a/Examples/Jupyter/AHP/AHP_shoesModel_dev_byDM2022.ipynb
+++ b/Examples/Jupyter/AHP/AHP_shoesModel_dev_byDM2022.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Model Type:pairwise\n",
+      "Model Name: Shoes model\n",
+      "Type:pairwise\n",
       "Nodes: []\n",
       " Clusters: []\n",
       " Node Connections: []\n",
@@ -61,7 +62,7 @@
     }
    ],
    "source": [
-    "shoesModel=str.Model()\n",
+    "shoesModel=str.Model(\"Shoes model\")\n",
     "\n",
     "# check\n",
     "print(shoesModel)"
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +338,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Model Type:pairwise\n",
+      "Model Name: Shoes model\n",
+      "Type:pairwise\n",
       "Nodes: [GoalNode order: 1, Quality order: 2, Style order: 3, Weight order: 4, Price order: 5, EasyOfPuttingOn order: 6, SlipResistance order: 7, Design order: 8, Color order: 9, EasyOfRunning order: 10, Material order: 11, Nike order: 12, Brooks order: 13, Asics order: 14]\n",
       " Clusters: [1_Goal order: 1, 2_Criteria order: 2, 3a_SubCriteria order: 4, 3b_SubCriteria order: 5, 3c_SubCriteria order: 6, 4_Alternatives order: 7]\n",
       " Node Connections: []\n",
@@ -358,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +538,7 @@
        "  'With respect to Material, which one is more important: Brooks or Asics ? By how much?']]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +586,7 @@
        "  'With respect to Material, which one is more dominant: Brooks or Asics ? By how much?']]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +608,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input.export4ExcelQuestFull(shoesModel, \"shoesModel_Excel_empty.xlsx\")"
+    "#for mac users\n",
+    "input.export4ExcelQuestFull(shoesModel, \"/Users/Shared/PythonAHP/Examples/IO Files/shoesModel_Excel_empty.xlsx\")\n",
+    "# for windows users\n",
+    "#input.export4ExcelQuestFull(shoesModel, \"C:/Users/Public/PythonAHP/Examples/IO Files/shoesModel_Excel_empty.xlsx\")"
    ]
   },
   {
@@ -629,109 +634,33 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved inconsistency for cluster-node :  2_Criteria - GoalNode\n",
-      "Saved inconsistency for cluster-node :  3a_SubCriteria - Quality\n",
-      "Saved inconsistency for cluster-node :  3b_SubCriteria - Style\n",
-      "Saved inconsistency for cluster-node :  3c_SubCriteria - Weight\n",
-      "Saved inconsistency for cluster-node :  4_Alternatives - Price\n",
-      "Saved inconsistency for cluster-node :  4_Alternatives - EasyOfPuttingOn\n",
-      "Saved inconsistency for cluster-node :  4_Alternatives - SlipResistance\n",
-      "Saved inconsistency for cluster-node :  4_Alternatives - Design\n",
-      "Saved inconsistency for cluster-node :  4_Alternatives - Color\n",
-      "Saved inconsistency for cluster-node :  4_Alternatives - EasyOfRunning\n",
-      "Saved inconsistency for cluster-node :  4_Alternatives - Material\n",
-      "---------------------------------------------------------------------------\n",
-      "\n",
-      "Inconsistency indices:\n",
-      "[0.045, 0.0, 0.0, 0.0, 0.0, 0.009, 0.009, 0.052, 0.001, 0.247, 0.052]\n",
-      "---------------------------------------------------------------------------\n",
-      "\n",
-      "Priority vectors:\n",
-      "[array([0.383, 0.090, 0.271, 0.255]), array([0.600, 0.400]), array([0.600, 0.400]), array([0.800, 0.200]), array([0.256, 0.327, 0.417]), array([0.540, 0.297, 0.163]), array([0.370, 0.224, 0.407]), array([0.493, 0.311, 0.196]), array([0.460, 0.319, 0.221]), array([0.302, 0.332, 0.366]), array([0.292, 0.463, 0.245])]\n",
-      "-----------------------SUPERMATRIX----------------------------------------------------\n",
-      "\n",
-      "[[0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000\n",
-      "  0.000 0.000]\n",
-      " [0.383 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000\n",
-      "  0.000 0.000]\n",
-      " [0.090 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000\n",
-      "  0.000 0.000]\n",
-      " [0.271 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000\n",
-      "  0.000 0.000]\n",
-      " [0.255 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000\n",
-      "  0.000 0.000]\n",
-      " [0.000 0.600 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000\n",
-      "  0.000 0.000]\n",
-      " [0.000 0.400 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000\n",
-      "  0.000 0.000]\n",
-      " [0.000 0.000 0.600 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000\n",
-      "  0.000 0.000]\n",
-      " [0.000 0.000 0.400 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000\n",
-      "  0.000 0.000]\n",
-      " [0.000 0.000 0.000 0.800 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000\n",
-      "  0.000 0.000]\n",
-      " [0.000 0.000 0.000 0.200 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000\n",
-      "  0.000 0.000]\n",
-      " [0.000 0.000 0.000 0.000 0.256 0.540 0.370 0.493 0.460 0.302 0.292 0.000\n",
-      "  0.000 0.000]\n",
-      " [0.000 0.000 0.000 0.000 0.327 0.297 0.224 0.311 0.319 0.332 0.463 0.000\n",
-      "  0.000 0.000]\n",
-      " [0.000 0.000 0.000 0.000 0.417 0.163 0.407 0.196 0.221 0.366 0.245 0.000\n",
-      "  0.000 0.000]]\n",
-      "-----------------------HIERARCHY----------------------------------------------------\n",
-      "\n",
-      "[[0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000\n",
-      "  0.000 0.000]\n",
-      " [0.140 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000\n",
-      "  0.000 0.000]\n",
-      " [0.033 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000\n",
-      "  0.000 0.000]\n",
-      " [0.099 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000\n",
-      "  0.000 0.000]\n",
-      " [0.093 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000\n",
-      "  0.000 0.000]\n",
-      " [0.084 0.300 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000\n",
-      "  0.000 0.000]\n",
-      " [0.056 0.200 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000\n",
-      "  0.000 0.000]\n",
-      " [0.020 0.000 0.300 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000\n",
-      "  0.000 0.000]\n",
-      " [0.013 0.000 0.200 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000\n",
-      "  0.000 0.000]\n",
-      " [0.079 0.000 0.000 0.400 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000\n",
-      "  0.000 0.000]\n",
-      " [0.020 0.000 0.000 0.100 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000\n",
-      "  0.000 0.000]\n",
-      " [0.135 0.236 0.240 0.150 0.256 0.540 0.370 0.493 0.460 0.302 0.292 0.000\n",
-      "  0.000 0.000]\n",
-      " [0.114 0.134 0.157 0.179 0.327 0.297 0.224 0.311 0.319 0.332 0.463 0.000\n",
-      "  0.000 0.000]\n",
-      " [0.116 0.130 0.103 0.171 0.417 0.163 0.407 0.196 0.221 0.366 0.245 0.000\n",
-      "  0.000 0.000]]\n",
-      "----------------------------LIMITING-----------------------------------------------\n",
-      "\n",
-      "[0.000 0.140 0.033 0.099 0.093 0.084 0.056 0.020 0.013 0.079 0.020 0.135\n",
-      " 0.114 0.116]\n",
-      "---------------------------BY CLUSTER------------------------------------------------\n",
-      "\n",
-      "[0.000 0.383 0.090 0.271 0.255 0.600 0.400 0.600 0.400 0.800 0.200 0.371\n",
-      " 0.312 0.318]\n"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[25], line 8\u001b[0m\n\u001b[1;32m      3\u001b[0m outputFilepath \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m/Users/Shared/PythonAHP/Examples/IO Files/shoesModel_Results.xlsx\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m      4\u001b[0m \u001b[39m# for windows users\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39m#inputFilePath=\"C:/Users/Public/PythonAHP/Examples/IO Files/shoesModel_Excel_filledin.xlsx\"\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39m#outputFilepath = \"C:/Users/Public/PythonAHP/Examples/IO Files/shoesModel_Results.xlsx\"\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m calc\u001b[39m.\u001b[39;49mcalcAHPMatricesSave2File(shoesModel,inputFilePath,outputFilepath,\u001b[39mFalse\u001b[39;49;00m,\u001b[39mTrue\u001b[39;49;00m,\u001b[39mTrue\u001b[39;49;00m)\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/AhpAnpLib/calcs_AHPLib.py:580\u001b[0m, in \u001b[0;36mcalcAHPMatricesSave2File\u001b[0;34m(model, inputFile, filepath, inputFileUse, normalbar, idealbar, verbal)\u001b[0m\n\u001b[1;32m    576\u001b[0m copyExcelSheet(inputFile, filepath, \u001b[39m\"\u001b[39m\u001b[39mpairwise_comp\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    577\u001b[0m  \u001b[39m#add inconsistency  to the results file\u001b[39;00m\n\u001b[1;32m    578\u001b[0m \u001b[39m# add priority vectors in the order given - assuming no changes\u001b[39;00m\n\u001b[0;32m--> 580\u001b[0m appendResults2Excel(model,filepath,\u001b[39m\"\u001b[39;49m\u001b[39mpairwise_comp\u001b[39;49m\u001b[39m\"\u001b[39;49m,normalbar,idealbar,verbal)\n\u001b[1;32m    582\u001b[0m listTitles\u001b[39m=\u001b[39mnodeNameList(model)\n\u001b[1;32m    587\u001b[0m \u001b[39m#calculate unweighted super matrix\u001b[39;00m\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/AhpAnpLib/calcs_AHPLib.py:510\u001b[0m, in \u001b[0;36mappendResults2Excel\u001b[0;34m(model, filepath, worksheetName, normalbar, idealbar, verb)\u001b[0m\n\u001b[1;32m    508\u001b[0m \u001b[39mfor\u001b[39;00m a \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(size):\n\u001b[1;32m    509\u001b[0m         \u001b[39mfor\u001b[39;00m b \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m (size):\n\u001b[0;32m--> 510\u001b[0m             destination_ws\u001b[39m.\u001b[39mcell(row\u001b[39m=\u001b[39mrow_res\u001b[39m+\u001b[39ma\u001b[39m+\u001b[39m\u001b[39m2\u001b[39m, column\u001b[39m=\u001b[39mb\u001b[39m+\u001b[39m\u001b[39m2\u001b[39m)\u001b[39m.\u001b[39mvalue \u001b[39m=\u001b[39m\u001b[39mround\u001b[39m(model\u001b[39m.\u001b[39;49mall_pc_matrices[prw_matrix_cnt][a,b],\u001b[39m3\u001b[39m)\n\u001b[1;32m    511\u001b[0m destination_ws\u001b[39m.\u001b[39mcell(row\u001b[39m=\u001b[39mrow_res, column\u001b[39m=\u001b[39mcol_res)\u001b[39m.\u001b[39mvalue \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mResults\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m    512\u001b[0m destination_ws\u001b[39m.\u001b[39mcell(row\u001b[39m=\u001b[39mrow_res, column\u001b[39m=\u001b[39mcol_res)\u001b[39m.\u001b[39mborder \u001b[39m=\u001b[39m border_noright\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
    "source": [
-    "inputFilePath=\"../../IO FIles/shoesModel_Excel_filledin.xlsx\"\n",
-    "outputFilepath = \"../../IO FIles/shoesModel_Results.xlsx\"\n",
+    "# for mac users\n",
+    "inputFilePath=\"/Users/Shared/PythonAHP/Examples/IO Files/shoesModel_Excel_filledin.xlsx\"\n",
+    "outputFilepath = \"/Users/Shared/PythonAHP/Examples/IO Files/shoesModel_Results.xlsx\"\n",
+    "# for windows users\n",
+    "#inputFilePath=\"C:/Users/Public/PythonAHP/Examples/IO Files/shoesModel_Excel_filledin.xlsx\"\n",
+    "#outputFilepath = \"C:/Users/Public/PythonAHP/Examples/IO Files/shoesModel_Results.xlsx\"\n",
     "\n",
     "calc.calcAHPMatricesSave2File(shoesModel,inputFilePath,outputFilepath,False,True,True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
