--- a/Examples/Jupyter/AHP/AHP_uniModel_chooseErasmus_dev_byDM2022.ipynb
+++ b/Examples/Jupyter/AHP/AHP_uniModel_chooseErasmus_dev_byDM2022.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 34,
       "metadata": {
         "collapsed": false,
         "jupyter": {
@@ -23,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 35,
       "metadata": {
         "trusted": true
       },
@@ -33,7 +33,8 @@
           "output_type": "stream",
           "text": [
             "\n",
-            "Model Type:pairwise\n",
+            "Model Name: ChooseErasmus\n",
+            "Type:pairwise\n",
             "Nodes: []\n",
             " Clusters: []\n",
             " Node Connections: []\n",
@@ -42,7 +43,7 @@
         }
       ],
       "source": [
-        "UniModel = str.Model() \n",
+        "UniModel = str.Model(\"ChooseErasmus\") \n",
         "\n",
         "print(UniModel)"
       ]
@@ -56,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 36,
       "metadata": {
         "trusted": true
       },
@@ -67,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 37,
       "metadata": {
         "trusted": true
       },
@@ -82,7 +83,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 38,
       "metadata": {
         "trusted": true
       },
@@ -96,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 39,
       "metadata": {
         "trusted": true
       },
@@ -119,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 40,
       "metadata": {
         "trusted": true
       },
@@ -141,7 +142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 41,
       "metadata": {
         "trusted": true
       },
@@ -154,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 42,
       "metadata": {
         "trusted": true
       },
@@ -182,7 +183,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 43,
       "metadata": {
         "trusted": true
       },
@@ -197,7 +198,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 44,
       "metadata": {
         "trusted": true
       },
@@ -227,7 +228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 45,
       "metadata": {
         "trusted": true
       },
@@ -239,7 +240,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 46,
       "metadata": {
         "trusted": true
       },
@@ -255,7 +256,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 47,
       "metadata": {
         "trusted": true
       },
@@ -270,7 +271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 48,
       "metadata": {
         "trusted": true
       },
@@ -284,7 +285,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 49,
       "metadata": {
         "trusted": true
       },
@@ -323,7 +324,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 50,
       "metadata": {
         "trusted": true
       },
@@ -338,7 +339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 51,
       "metadata": {
         "trusted": true
       },
@@ -348,7 +349,8 @@
           "output_type": "stream",
           "text": [
             "\n",
-            "Model Type:pairwise\n",
+            "Model Name: ChooseErasmus\n",
+            "Type:pairwise\n",
             "Nodes: [GoalNode order: 0, 1Academical order: 1, 2Language order: 2, 3Financial order: 3, 4Cultural order: 4, 5City order: 5, 6DataCourses order: 6, 7Prestige order: 7, 8PreparatoryCosts order: 8, 9LivingExpenses order: 9, Pittsburgh order: 10, Seoul order: 11, Eindhoven order: 12]\n",
             " Clusters: [1Goal order: 0, 2Criteria order: 1, 3SubCriteria order: 2, 4SubCriteria order: 3, 5Alternatives order: 4]\n",
             " Node Connections: []\n",
@@ -369,7 +371,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 52,
       "metadata": {
         "trusted": true
       },
@@ -381,7 +383,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 53,
       "metadata": {
         "trusted": true
       },
@@ -392,7 +394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 54,
       "metadata": {
         "trusted": true
       },
@@ -403,7 +405,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 55,
       "metadata": {
         "trusted": true
       },
@@ -414,7 +416,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 56,
       "metadata": {
         "trusted": true
       },
@@ -425,7 +427,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 57,
       "metadata": {
         "trusted": true
       },
@@ -436,7 +438,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 58,
       "metadata": {
         "trusted": true
       },
@@ -447,7 +449,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 59,
       "metadata": {
         "trusted": true
       },
@@ -458,7 +460,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 60,
       "metadata": {
         "trusted": true
       },
@@ -468,7 +470,8 @@
           "output_type": "stream",
           "text": [
             "\n",
-            "Model Type:pairwise\n",
+            "Model Name: ChooseErasmus\n",
+            "Type:pairwise\n",
             "Nodes: [GoalNode order: 0, 1Academical order: 1, 2Language order: 2, 3Financial order: 3, 4Cultural order: 4, 5City order: 5, 6DataCourses order: 6, 7Prestige order: 7, 8PreparatoryCosts order: 8, 9LivingExpenses order: 9, Pittsburgh order: 10, Seoul order: 11, Eindhoven order: 12]\n",
             " Clusters: [1Goal order: 0, 2Criteria order: 1, 3SubCriteria order: 2, 4SubCriteria order: 3, 5Alternatives order: 4]\n",
             " Node Connections: {GoalNode order: 0: [1Academical order: 1, 2Language order: 2, 3Financial order: 3, 4Cultural order: 4, 5City order: 5], 1Academical order: 1: [6DataCourses order: 6, 7Prestige order: 7], 2Language order: 2: [Pittsburgh order: 10, Seoul order: 11, Eindhoven order: 12], 3Financial order: 3: [8PreparatoryCosts order: 8, 9LivingExpenses order: 9], 4Cultural order: 4: [Pittsburgh order: 10, Seoul order: 11, Eindhoven order: 12], 5City order: 5: [Pittsburgh order: 10, Seoul order: 11, Eindhoven order: 12], 6DataCourses order: 6: [Pittsburgh order: 10, Seoul order: 11, Eindhoven order: 12], 7Prestige order: 7: [Pittsburgh order: 10, Seoul order: 11, Eindhoven order: 12], 8PreparatoryCosts order: 8: [Pittsburgh order: 10, Seoul order: 11, Eindhoven order: 12], 9LivingExpenses order: 9: [Pittsburgh order: 10, Seoul order: 11, Eindhoven order: 12], Pittsburgh order: 10: [], Seoul order: 11: [], Eindhoven order: 12: []}\n",
@@ -482,7 +485,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 61,
       "metadata": {
         "trusted": true
       },
@@ -511,7 +514,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 62,
       "metadata": {
         "trusted": true
       },
@@ -572,7 +575,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 63,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -581,7 +584,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 64,
       "metadata": {
         "trusted": true
       },
@@ -652,16 +655,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 65,
       "metadata": {},
       "outputs": [],
       "source": [
-        "input.export4ExcelQuestFull(UniModel,'uniModel.xlsx')"
+        "# for mac users\n",
+        "input.export4ExcelQuestFull(UniModel,'/Users/Shared/PythonAHP/Examples/IO Files/uniModel.xlsx')\n",
+        "# for windows users\n",
+        "#input.export4ExcelQuestFull(UniModel,'C:/Users/Public/PythonAHP/Examples/IO Files/uniModel.xlsx')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 66,
       "metadata": {},
       "outputs": [
         {
@@ -749,7 +755,39 @@
             "---------------------------BY CLUSTER------------------------------------------------\n",
             "\n",
             "[0.000 0.503 0.268 0.119 0.043 0.068 0.833 0.167 0.125 0.875 0.566 0.215\n",
-            " 0.219]\n",
+            " 0.219]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# for mac users\n",
+        "inputFilePath=\"/Users/Shared/PythonAHP/Examples/IO Files/uniModel_Filledin.xlsx\"\n",
+        "outputFilepath=\"/Users/Shared/PythonAHP/Examples/IO Files/uniModel_Results.xlsx\"\n",
+        "# for windows users\n",
+        "#inputFilePath=\"C:/Users/Public/PythonAHP/Examples/IO Files/uniModel_Filledin.xlsx\"\n",
+        "#outputFilepath=\"C:/Users/Public/PythonAHP/Examples/IO Files/uniModel_Results.xlsx\"\n",
+        "\n",
+        "calc.calcAHPMatricesSave2File(UniModel,inputFilePath,outputFilepath,True,False,True,True)\n",
+        "\n"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Sensitivity Analysis"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 67,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
             "multiplier 2.0115264376700375\n",
             "supermatrix [[0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000\n",
             "  0.000]\n",
@@ -2070,10 +2108,6 @@
         }
       ],
       "source": [
-        "inputFilePath=\"../../IO Files/uniModel_Filledin.xlsx\"\n",
-        "outputFilepath=\"../../IO Files/uniModel_Results.xlsx\"\n",
-        "calc.calcAHPMatricesSave2File(UniModel,inputFilePath,outputFilepath,False,True,True)\n",
-        "\n",
         "calc.sensitivityCellSupermatrixPlot(UniModel,\"5Alternatives\",outputFilepath,\"1Academical\",\"2Language\",\"3Financial\",\"4Cultural\")\n"
       ]
     }
